--- a/HRStore/views/pay_order.xml
+++ b/HRStore/views/pay_order.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0"?>
 <odoo>
-    <!---->
-    <template id="forum" name="forum">
+<!--页面  梁晓珂 计科162 161002221   实现 梁晓珂 计科162 161002221-->
+    <template id="pay_order" name="HRStore Payment">
         <head>
             <t t-call-assets="HRStore.my_custom_assets" tjs="false"/>
             <t t-call-assets="HRStore.my_custom_assets" tcss="false"/>
         </head>
-
         <body class="body-wrapper">
+
             <section>
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <nav class="navbar navbar-expand-lg  navigation">
+                             <nav class="navbar navbar-expand-lg  navigation">
                                 <a class="navbar-brand" href="/home">
                                     <img src="/HRStore/static/src/images/logo.jpg" height="100" width="220"/>
                                 </a>
@@ -23,13 +23,13 @@
                                 </button>
                                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                     <ul class="navbar-nav ml-auto main-nav ">
-                                        <li class="nav-item">
+                                        <li class="nav-item active">
                                             <form action="/home" method="post">
                                                 <input type="hidden" name="csrf_token"
                                                        t-att-value="request.csrf_token()"/>
                                                 <input type="hidden" name="user_id"
                                                        t-att-value="user_id"/>
-                                                <button class="btn btn-link nav-link"  style="color:black;"
+                                                <button class="btn btn-link nav-link"
                                                         type="submit">首页
                                                 </button>
                                             </form>
@@ -86,13 +86,13 @@
                                                 </button>
                                             </form>
                                         </li>
-                                        <li class="nav-item active">
+                                        <li class="nav-item">
                                             <form action="/forum" method="post">
                                                 <input type="hidden" name="csrf_token"
                                                        t-att-value="request.csrf_token()"/>
                                                 <input type="hidden" name="user_id"
                                                        t-att-value="user_id"/>
-                                                <button class="btn btn-link nav-link"
+                                                <button class="btn btn-link nav-link" style="color:black;"
                                                         type="submit">论坛
                                                 </button>
                                             </form>
@@ -140,160 +140,39 @@
                     </div>
                 </div>
             </section>
-            <!--=================================
-            =            comment            =
-            ==================================-->
+            <!--==================================
+            =            User Profile            =
+            ===================================-->
 
-            <section class="blog single-blog section">
+            <section class="user-profile section">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-8 offset-md-1 col-lg-8 offset-lg-0" style="margin-right:70px;">
-                            <div class="sidebar">
-                                <!-- Category Widget -->
-                                <div class="widget dashboard-container my-adslist">
-                                    <!-- Widget Header -->
-                                    <h5 class="widget-header">
-                                        我要发贴。。。
-                                    </h5>
-                                    <div class="goods-buy" style="margin:0 auto;margin-bottom:20px;">
+                        <div class="col-md-12 offset-md-1 col-lg-12 offset-lg-0">
+                            <!-- Edit Personal Info -->
+                            <div class="widget personal-info">
+                                <h3 class="widget-header user">支付订单</h3>
+                                <center>
 
-                                        <form action="/add_forum" method="post">
-                                            <input type="hidden" name="csrf_token"
-                                                   t-att-value="request.csrf_token()"/>
-                                            <input type="hidden" name="user_id"
-                                                   t-att-value="user_id"/>
-                                            <div class="form-group">
-                                                <input type="text" name="title"
-                                                       placeholder="标题："/>
-                                                <textarea name="content" class="form-control" rows="7"></textarea>
-                                            </div>
 
-                                            <div class="form-group">
-                                                <label for="name">标签</label>
-                                                <select class="form-control" name="label">
-                                                    <option value="1">公告</option>
-                                                    <option value="2">人员招聘</option>
-                                                    <option value="3">求职</option>
-                                                    <option value="4">我要提问</option>
-                                                    <option value="5">其它</option>
-                                                </select>
-                                            </div>
+                                <form action="/pay" method="post">
 
-                                            <button type="submit" class="btn add-button">发布</button>
+                                    <!-- File chooser -->
+                                    <center>
+                                        <img src="/HRStore/static/src/images/Q2code.jpg" height="100" width="220"/>
+                                    </center>
 
-                                        </form>
-
-                                    </div>
-
-                                </div>
-
+                                     <input type="hidden" name="csrf_token"
+                                           t-att-value="request.csrf_token()"/>
+                                    <input type="hidden" name="product_id"
+                                           t-att-value="product_id"/>
+                                    <input type="hidden" name="user_id"
+                                           t-att-value="user_id"/>
+                                    <button class="btn btn-transparent">确认付款</button>
+                                </form>
+                                </center>
                             </div>
-                            <div class="widget dashboard-container my-adslist row">
-                                <form action="/forum" method="post">
-                                    <input type="hidden" name="csrf_token"
-                                           t-att-value="request.csrf_token()"/>
-                                    <input type="hidden" name="user_id"
-                                           t-att-value="user_id"/>
-                                    <button type="submit" class="btn btn-md btn-primary">全部</button>
-                                </form>
-                                <form action="/get_forum" method="post">
-                                    <input type="hidden" name="csrf_token"
-                                           t-att-value="request.csrf_token()"/>
-                                    <input type="hidden" name="user_id"
-                                           t-att-value="user_id"/>
-                                    <input type="hidden" name="label"
-                                           t-att-value="1"/>
-                                    <button type="submit" class="btn btn-md btn-primary">公告</button>
-                                </form>
-                                 <form action="/get_forum" method="post">
-                                    <input type="hidden" name="csrf_token"
-                                           t-att-value="request.csrf_token()"/>
-                                    <input type="hidden" name="user_id"
-                                           t-att-value="user_id"/>
-                                    <input type="hidden" name="label"
-                                           t-att-value="2"/>
-                                    <button type="submit" class="btn btn-md btn-primary">人员招聘</button>
-                                </form>
-                                 <form action="/get_forum" method="post">
-                                    <input type="hidden" name="csrf_token"
-                                           t-att-value="request.csrf_token()"/>
-                                    <input type="hidden" name="user_id"
-                                           t-att-value="user_id"/>
-                                    <input type="hidden" name="label"
-                                           t-att-value="3"/>
-                                    <button type="submit" class="btn btn-md btn-primary">求职</button>
-                                </form>
-                                 <form action="/get_forum" method="post">
-                                    <input type="hidden" name="csrf_token"
-                                           t-att-value="request.csrf_token()"/>
-                                    <input type="hidden" name="user_id"
-                                           t-att-value="user_id"/>
-                                    <input type="hidden" name="label"
-                                           t-att-value="4"/>
-                                    <button type="submit" class="btn btn-md btn-primary">我要提问</button>
-                                </form>
-                                 <form action="/get_forum" method="post">
-                                    <input type="hidden" name="csrf_token"
-                                           t-att-value="request.csrf_token()"/>
-                                    <input type="hidden" name="user_id"
-                                           t-att-value="user_id"/>
-                                    <input type="hidden" name="label"
-                                           t-att-value="5"/>
-                                    <button type="submit" class="btn btn-md btn-primary">其他</button>
-                                </form>
-                            </div>
-                            <t t-if="forum_list">
-                                <t t-foreach="forum_list" t-as="forum">
-                                    <div class="widget dashboard-container my-adslist">
-                                        <h3 class="widget-header">
-                                            <t t-esc="forum.title"></t>
-                                        </h3>
-                                        <p t-esc="forum.username"></p>
-                                        <span t-esc="forum.content"></span>
-                                        <p>
-                                            <span id="time" t-esc="forum.create_date">2019年8月13日</span>
-                                        </p>
-                                        <button class="btn btn-sm btn-info">
-                                            <t t-if="forum.label=='1'">公告</t>
-                                            <t t-if="forum.label=='2'">人员招聘</t>
-                                            <t t-if="forum.label=='3'">求职</t>
-                                            <t t-if="forum.label=='4'">我要提问</t>
-                                            <t t-if="forum.label=='5'">其他</t>
 
-                                        </button>
-
-                                    </div>
-                                </t>
-                            </t>
                         </div>
-
-                        <div class="col-md-3 offset-md-1 col-lg-3 offset-lg-0">
-                            <div class="sidebar">
-                                <!-- Category Widget -->
-                                <div class="widget category">
-                                    <!-- Widget Header -->
-                                    <h5 class="widget-header">商家信息</h5>
-                                    <div class="profile-thumb">
-                                        <img src="" alt="" class="rounded-circle"/>
-                                        <!--<span t-field="commonuser_info.user_image"
-                                              t-options="{'widget': 'image', 'class': 'mx-auto d-block img-thumbnail'}"/>
-                                    -->
-                                    </div>
-                                    <p>联系方式：</p>
-                                </div>
-
-                            </div>
-                            <div class="sidebar">
-                                <!-- Category Widget -->
-                                <div class="widget category">
-                                    <!-- Widget Header -->
-                                    <h5 class="widget-header">您想在此推荐您的产品吗？</h5>
-                                    <p>咨询热线：886-886-886</p>
-                                </div>
-
-                            </div>
-                        </div>
-
                     </div>
                 </div>
             </section>
@@ -317,7 +196,6 @@
                             </li>
                             <li>
                                 <a href="#">北京市网络食品销售第三方平台提供者备案：京网食A33010001</a>
-                                <br/>
                             </li>
                             <li>
                                 <a href="#">信息网络传播视听许可证：1109364号</a>
@@ -344,9 +222,8 @@
                     </a>
                 </div>
             </footer>
-
-
         </body>
+
     </template>
 
 </odoo>
