--- a/HRStore/views/customer_info.xml
+++ b/HRStore/views/customer_info.xml
@@ -5,6 +5,31 @@
         <head>
             <t t-call-assets="HRStore.my_custom_assets" tjs="false"/>
             <t t-call-assets="HRStore.my_custom_assets" tcss="false"/>
+            <script type="text/javascript">
+                window.onload = function()
+                {
+                var Jjian = document.getElementById("jian");
+                var Jjia = document.getElementById("jia");
+                var zj = document.getElementsByTagName("input")[0];
+                var i = 1;
+
+                Jjia.onclick = function()
+                {
+                //zj.value = ++i;
+                i = zj.value;
+                zj.value = ++i;
+
+                }
+                Jjian.onclick = function()
+                {
+                i = zj.value;
+                if(i!=0){
+                zj.value = --i;
+                }
+                }
+
+                }
+            </script>
         </head>
 
         <body class="body-wrapper">
@@ -12,7 +37,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <nav class="navbar navbar-expand-lg  navigation">
+                             <nav class="navbar navbar-expand-lg  navigation">
                                 <a class="navbar-brand" href="/home">
                                     <img src="/HRStore/static/src/images/logo.jpg" height="100" width="220"/>
                                 </a>
@@ -24,32 +49,99 @@
                                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                     <ul class="navbar-nav ml-auto main-nav ">
                                         <li class="nav-item active">
-                                            <a class="nav-link" href="/home">首页</a>
+                                            <form action="/home" method="post">
+                                                <input type="hidden" name="csrf_token"
+                                                       t-att-value="request.csrf_token()"/>
+                                                <input type="hidden" name="user_id"
+                                                       t-att-value="user_id"/>
+                                                <button class="btn btn-link nav-link"
+                                                        type="submit">首页
+                                                </button>
+                                            </form>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="/products?type=2">培训产品</a>
+                                            <form action="/products" method="post">
+                                                <input type="hidden" name="csrf_token"
+                                                       t-att-value="request.csrf_token()"/>
+                                                <input type="hidden" name="user_id"
+                                                       t-att-value="user_id"/>
+                                                <input type="hidden" name="type"
+                                                       t-att-value="2"/>
+                                                <button class="btn btn-link nav-link" style="color:black;"
+                                                        type="submit">培训产品
+                                                </button>
+                                            </form>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="/products?type=1">活动策划</a>
+                                            <form action="/products" method="post">
+                                                <input type="hidden" name="csrf_token"
+                                                       t-att-value="request.csrf_token()"/>
+                                                <input type="hidden" name="user_id"
+                                                       t-att-value="user_id"/>
+                                                <input type="hidden" name="type"
+                                                       t-att-value="1"/>
+                                                <button class="btn btn-link nav-link" style="color:black;"
+                                                        type="submit">活动策划
+                                                </button>
+                                            </form>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="/products?type=3">精美商品</a>
+                                            <form action="/products" method="post">
+                                                <input type="hidden" name="csrf_token"
+                                                       t-att-value="request.csrf_token()"/>
+                                                <input type="hidden" name="user_id"
+                                                       t-att-value="user_id"/>
+                                                <input type="hidden" name="type"
+                                                       t-att-value="3"/>
+                                                <button class="btn btn-link nav-link" style="color:black;"
+                                                        type="submit">精美商品
+                                                </button>
+                                            </form>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="/products?type=4">法律服务</a>
+                                            <form action="/products" method="post">
+                                                <input type="hidden" name="csrf_token"
+                                                       t-att-value="request.csrf_token()"/>
+                                                <input type="hidden" name="user_id"
+                                                       t-att-value="user_id"/>
+                                                <input type="hidden" name="type"
+                                                       t-att-value="4"/>
+                                                <button class="btn btn-link nav-link" style="color:black;"
+                                                        type="submit">法律服务
+                                                </button>
+                                            </form>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="/customer_service">在线客服</a>
+                                            <form action="/forum" method="post">
+                                                <input type="hidden" name="csrf_token"
+                                                       t-att-value="request.csrf_token()"/>
+                                                <input type="hidden" name="user_id"
+                                                       t-att-value="user_id"/>
+                                                <button class="btn btn-link nav-link" style="color:black;"
+                                                        type="submit">论坛
+                                                </button>
+                                            </form>
+                                        </li>
+                                        <li class="nav-item">
+                                            <form action="/customer_service" method="post">
+                                                <input type="hidden" name="csrf_token"
+                                                       t-att-value="request.csrf_token()"/>
+                                                <input type="hidden" name="user_id"
+                                                       t-att-value="user_id"/>
+                                                <button class="btn btn-link nav-link" style="color:black;"
+                                                        type="submit">在线客服
+                                                </button>
+                                            </form>
                                         </li>
                                     </ul>
-                                    <t t-if="request.session.user_id">
+                                    <t t-if="user_id">
                                         <ul class="navbar-nav ml-auto mt-10">
                                             <li class="nav-item">
                                                 <form action="/user_profile" method="post">
                                                     <input type="hidden" name="csrf_token"
                                                            t-att-value="request.csrf_token()"/>
                                                     <input type="hidden" name="user_id"
-                                                           t-att-value="request.session.user_id"/>
+                                                           t-att-value="user_id"/>
                                                     <input type="image"
                                                            src="\HRStore\static\src\images\my.png" height="60px"/>
                                                 </form>
@@ -57,6 +149,7 @@
                                         </ul>
                                     </t>
                                     <t t-else="">
+
                                         <ul class="navbar-nav ml-auto mt-10">
                                             <li class="nav-item">
                                                 <a class="nav-link login-button" href="/login">登陆</a>
@@ -106,22 +199,40 @@
                                 <div class="widget user-dashboard-menu">
                                     <ul>
                                         <li class="active">
-                                            <a href="/cart">
-                                                <i class="fa fa-user"></i>
+                                             <form action="/cart" method="post">
+                                                <input type="hidden" name="csrf_token"
+                                                       t-att-value="request.csrf_token()"/>
+                                                <input type="hidden" name="user_id"
+                                                       t-att-value="user_id"/>
+                                                <button class="btn btn-link"
+                                                        type="submit"><i class="fa fa-user"></i>
                                                 购物车
-                                            </a>
+                                                </button>
+                                            </form>
                                         </li>
                                         <li>
-                                            <a href="/order">
-                                                <i class="fa fa-user"></i>
+                                            <form action="/order" method="post">
+                                                <input type="hidden" name="csrf_token"
+                                                       t-att-value="request.csrf_token()"/>
+                                                <input type="hidden" name="user_id"
+                                                       t-att-value="user_id"/>
+                                                <button class="btn btn-link" style="color:black;"
+                                                        type="submit"><i class="fa fa-user"></i>
                                                 订单
-                                            </a>
+                                                </button>
+                                            </form>
                                         </li>
                                         <li>
-                                            <a href="/logout">
-                                                <i class="fa fa-cog"></i>
+                                            <form action="/logout" method="post">
+                                                <input type="hidden" name="csrf_token"
+                                                       t-att-value="request.csrf_token()"/>
+                                                <input type="hidden" name="user_id"
+                                                       t-att-value="user_id"/>
+                                                <button class="btn btn-link" style="color:black;"
+                                                        type="submit"><i class="fa fa-cog"></i>
                                                 退出登录
-                                            </a>
+                                                </button>
+                                            </form>
                                         </li>
                                     </ul>
                                 </div>
@@ -186,7 +297,8 @@
                                                         <td>
                                                             <span class="jian" id="jian" style="cursor:pointer;">-
                                                             </span>
-                                                            <input name="pro_num_hidden" id ="pro_num_hidden" type="hidden"
+                                                            <input name="pro_num_hidden" id="pro_num_hidden"
+                                                                   type="hidden"
                                                                    t-att-value="cart_product[1]"
                                                                    style="width:50px;text-align:center;height:22px;"/>
                                                             <input name="pro_num" type="text" id="pro_num"
@@ -243,6 +355,8 @@
                                                                    t-att-value="request.csrf_token()"/>
                                                             <input name="cart_id" type="hidden"
                                                                    t-att-value="cart_product[3]"/>
+                                                            <input type="hidden" name="user_id"
+                                                                   t-att-value="user_id"/>
                                                             <button class="btn btn-default btn-circle btn-outline-danger">
                                                                 <i class="fa fa-trash"></i>
                                                             </button>
@@ -308,6 +422,7 @@
                     </a>
                 </div>
             </footer>
+
 
         </body>
 
