--- a/HRStore/views/product_details.xml
+++ b/HRStore/views/product_details.xml
@@ -11,7 +11,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <nav class="navbar navbar-expand-lg  navigation">
+                              <nav class="navbar navbar-expand-lg  navigation">
                                 <a class="navbar-brand" href="/home">
                                     <img src="/HRStore/static/src/images/logo.jpg" height="100" width="220"/>
                                 </a>
@@ -23,32 +23,99 @@
                                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                     <ul class="navbar-nav ml-auto main-nav ">
                                         <li class="nav-item active">
-                                            <a class="nav-link" href="/home">首页</a>
+                                            <form action="/home" method="post">
+                                                <input type="hidden" name="csrf_token"
+                                                       t-att-value="request.csrf_token()"/>
+                                                <input type="hidden" name="user_id"
+                                                       t-att-value="user_id"/>
+                                                <button class="btn btn-link nav-link"
+                                                        type="submit">首页
+                                                </button>
+                                            </form>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="/products?type=2">培训产品</a>
+                                            <form action="/products" method="post">
+                                                <input type="hidden" name="csrf_token"
+                                                       t-att-value="request.csrf_token()"/>
+                                                <input type="hidden" name="user_id"
+                                                       t-att-value="user_id"/>
+                                                <input type="hidden" name="type"
+                                                       t-att-value="2"/>
+                                                <button class="btn btn-link nav-link" style="color:black;"
+                                                        type="submit">培训产品
+                                                </button>
+                                            </form>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="/products?type=1">活动策划</a>
+                                            <form action="/products" method="post">
+                                                <input type="hidden" name="csrf_token"
+                                                       t-att-value="request.csrf_token()"/>
+                                                <input type="hidden" name="user_id"
+                                                       t-att-value="user_id"/>
+                                                <input type="hidden" name="type"
+                                                       t-att-value="1"/>
+                                                <button class="btn btn-link nav-link" style="color:black;"
+                                                        type="submit">活动策划
+                                                </button>
+                                            </form>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="/products?type=3">精美商品</a>
+                                            <form action="/products" method="post">
+                                                <input type="hidden" name="csrf_token"
+                                                       t-att-value="request.csrf_token()"/>
+                                                <input type="hidden" name="user_id"
+                                                       t-att-value="user_id"/>
+                                                <input type="hidden" name="type"
+                                                       t-att-value="3"/>
+                                                <button class="btn btn-link nav-link" style="color:black;"
+                                                        type="submit">精美商品
+                                                </button>
+                                            </form>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="/products?type=4">法律服务</a>
+                                            <form action="/products" method="post">
+                                                <input type="hidden" name="csrf_token"
+                                                       t-att-value="request.csrf_token()"/>
+                                                <input type="hidden" name="user_id"
+                                                       t-att-value="user_id"/>
+                                                <input type="hidden" name="type"
+                                                       t-att-value="4"/>
+                                                <button class="btn btn-link nav-link" style="color:black;"
+                                                        type="submit">法律服务
+                                                </button>
+                                            </form>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="/customer_service">在线客服</a>
+                                            <form action="/forum" method="post">
+                                                <input type="hidden" name="csrf_token"
+                                                       t-att-value="request.csrf_token()"/>
+                                                <input type="hidden" name="user_id"
+                                                       t-att-value="user_id"/>
+                                                <button class="btn btn-link nav-link" style="color:black;"
+                                                        type="submit">论坛
+                                                </button>
+                                            </form>
+                                        </li>
+                                        <li class="nav-item">
+                                            <form action="/customer_service" method="post">
+                                                <input type="hidden" name="csrf_token"
+                                                       t-att-value="request.csrf_token()"/>
+                                                <input type="hidden" name="user_id"
+                                                       t-att-value="user_id"/>
+                                                <button class="btn btn-link nav-link" style="color:black;"
+                                                        type="submit">在线客服
+                                                </button>
+                                            </form>
                                         </li>
                                     </ul>
-                                    <t t-if="request.session.user_id">
+                                    <t t-if="user_id">
                                         <ul class="navbar-nav ml-auto mt-10">
                                             <li class="nav-item">
                                                 <form action="/user_profile" method="post">
                                                     <input type="hidden" name="csrf_token"
                                                            t-att-value="request.csrf_token()"/>
                                                     <input type="hidden" name="user_id"
-                                                           t-att-value="request.session.user_id"/>
+                                                           t-att-value="user_id"/>
                                                     <input type="image"
                                                            src="\HRStore\static\src\images\my.png" height="60px"/>
                                                 </form>
@@ -138,7 +205,7 @@
                                             <input type="hidden" name="product_id"
                                                    t-att-value="product.id"/>
                                             <input type="hidden" name="user_id"
-                                                   t-att-value="request.session.user_id"/>
+                                                       t-att-value="user_id"/>
                                             <input type="hidden" name="pro_type"
                                                    t-att-value="product.pro_type"/>
                                             <t t-if="product.pro_type=='3'">
@@ -158,7 +225,7 @@
                                             <input type="hidden" name="product_id"
                                                    t-att-value="product.id"/>
                                             <input type="hidden" name="user_id"
-                                                   t-att-value="request.session.user_id"/>
+                                                       t-att-value="user_id"/>
                                             <button type="submit" class="btn add-button">加入购物车</button>
                                         </form>
                                     </div>
